--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "07066208",
+   "id": "dbbbd4b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e74b9958",
+   "id": "4034c747",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f3281aa",
+   "id": "03be41d8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2aa2ef06",
+   "id": "50835d6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.886159Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "557f59f8",
+   "id": "64b8e1dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.902882Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe8dbb21",
+   "id": "fca22c10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.959602Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0769c4b",
+   "id": "dcf864dc",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7bc27066",
+   "id": "c7c0c1f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.375669Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ae6ecc",
+   "id": "ae8d2d05",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7791498c",
+   "id": "057ced6c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.842544Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d0f714",
+   "id": "976fe0a3",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "559febff",
+   "id": "e5fa9d91",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.286887Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9fbe78b6",
+   "id": "97a31c86",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.853357Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "181ce691",
+   "id": "cb1b01c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:10.153387Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2ce043",
+   "id": "d1d05242",
    "metadata": {},
    "source": [
     "\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "efeed3cf",
+   "id": "aafbcbfc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:13.009426Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc5639b6",
+   "id": "c9fa755b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:15.560641Z",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76a3adf6",
+   "id": "40790f9c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a31f0381",
+   "id": "b547eb2c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "356d9606",
+   "id": "623738bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.366022Z",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e870ca54",
+   "id": "b9a39176",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.658458Z",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a32326a7",
+   "id": "d1b50d99",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:51:11.735631Z",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0c566b",
+   "id": "ada530ec",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "220be7e0",
+   "id": "497aff33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a8996049",
+   "id": "18f8b4fc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5045d2cd",
+   "id": "2c57a00f",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "15caa944",
+   "id": "e0f2c048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,8 +1078,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b0c8c75",
+   "execution_count": 12,
+   "id": "c48ce2e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1372,6 +1372,41 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     }
@@ -1396,7 +1431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f978a970",
+   "id": "3490ef03",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1405,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0d6d09c8",
+   "id": "5339b7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "96ab811d",
+   "id": "65503dc5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1458,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8009fca2",
+   "id": "6e51ab41",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1467,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0b0553ea",
+   "id": "ac30647c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9841bc3",
+   "id": "6e7a687c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1520,7 +1555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0593577",
+   "id": "d06976ce",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1529,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8fa4003b",
+   "id": "dd184c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "34767fbd",
+   "id": "ed3e459d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1911,7 +1946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b0954ce",
+   "id": "9b8894c0",
    "metadata": {},
    "outputs": [],
    "source": []
