--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy5.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ad272840",
+   "id": "21efd659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "44f9ce91",
+   "id": "131a917e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f7615e0",
+   "id": "7f8d36a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bf5e9a4e",
+   "id": "5dcfd34f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.886159Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5901dfd8",
+   "id": "e4ac90b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.902882Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "81340e2b",
+   "id": "4e0a22ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.959602Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e29159",
+   "id": "0f407f88",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0900965",
+   "id": "0b348390",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.375669Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a8765a",
+   "id": "1804e62f",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9dd53b8d",
+   "id": "03b4f02e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.842544Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea6db98",
+   "id": "b75faa3a",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b03f2b9",
+   "id": "4b9c12c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.286887Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "79d28ab6",
+   "id": "5d5ff0d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.853357Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab6219d7",
+   "id": "4eb86f85",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:10.153387Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084dfeb3",
+   "id": "073c1c6f",
    "metadata": {},
    "source": [
     "\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "92f02114",
+   "id": "18a90827",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:13.009426Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0bb7c269",
+   "id": "a3d7b08a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:15.560641Z",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084408d5",
+   "id": "ed30878d",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10190ac2",
+   "id": "1c4c7de2",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a1df2ca4",
+   "id": "67809c07",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.366022Z",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12082fea",
+   "id": "53c82a2a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.658458Z",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98807a34",
+   "id": "e1a68e16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:51:11.735631Z",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ee967f",
+   "id": "e1e6e1a5",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e2632ac6",
+   "id": "38dc7964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fe3202d4",
+   "id": "c99c148e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe45c869",
+   "id": "38269b32",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2dbda637",
+   "id": "0678a65e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2816945",
+   "id": "3e9e0895",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7d3d69",
+   "id": "3b289ac8",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "35431360",
+   "id": "29a92483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e599d0f4",
+   "id": "e9db36d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d9d3f4",
+   "id": "2e7f1c71",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ec27b900",
+   "id": "6e22ea1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe79889e",
+   "id": "9e9ca36d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08da6575",
+   "id": "2faa8863",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c4c21b3",
+   "id": "fc23f18b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,8 +1592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "861d6308",
+   "execution_count": 12,
+   "id": "a5ece1eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1866,6 +1866,60 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     }
@@ -1891,7 +1945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a19b5e",
+   "id": "df5ba45c",
    "metadata": {},
    "outputs": [],
    "source": []
