--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ff805cde",
+   "id": "4d835b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c94c3415",
+   "id": "597ce146",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ca16200",
+   "id": "9631335e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "71bee090",
+   "id": "3ea1fb1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.886159Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e98fbe1a",
+   "id": "34849aa0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.902882Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "60497c84",
+   "id": "22150d30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.959602Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141f78b5",
+   "id": "3edb80c1",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c99e9ca",
+   "id": "a13efb46",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.375669Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96b9039",
+   "id": "175e01fd",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5117257",
+   "id": "93826506",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.842544Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9846c650",
+   "id": "1ea2d1b2",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c2c15ed",
+   "id": "d37f0df1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.286887Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b13cfb3b",
+   "id": "09c13424",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.853357Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e3fa673a",
+   "id": "fa66781f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:10.153387Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f18e8c9",
+   "id": "e9d9b052",
    "metadata": {},
    "source": [
     "\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f598e324",
+   "id": "74ec3cb8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:13.009426Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8152f4ef",
+   "id": "458668e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:15.560641Z",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723f8b73",
+   "id": "ef8f0f1d",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b62dd05e",
+   "id": "151baa19",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "25a76408",
+   "id": "877c6731",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.366022Z",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4f7c076f",
+   "id": "debc503f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.658458Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "469ffe7d",
+   "execution_count": 15,
+   "id": "fb287311",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:51:11.735631Z",
@@ -781,6 +781,60 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     }
@@ -805,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190e8783",
+   "id": "2c33018f",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -814,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3da41081",
+   "id": "ec65557b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "24dba2eb",
+   "id": "b10f5837",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1195,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e960029e",
+   "id": "7d4e0c57",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1204,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b216c42b",
+   "id": "ee4fff0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c893872e",
+   "id": "e1dee40f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1585,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9188eb",
+   "id": "84cf3096",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1594,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "faed432d",
+   "id": "19f70994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b02fbae",
+   "id": "e501cf40",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1647,7 +1701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eef9e2f7",
+   "id": "b561fa4b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1656,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e3c3c833",
+   "id": "395004b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "647e7817",
+   "id": "44c803bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1709,7 +1763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81fddc23",
+   "id": "680bac03",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1718,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ad5893da",
+   "id": "66e5ad58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1797,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "efcace5b",
+   "id": "db1e3412",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -2100,7 +2154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f5a355",
+   "id": "00da7145",
    "metadata": {},
    "outputs": [],
    "source": []
