--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1c7a8cc0",
+   "id": "0954de2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd661df7",
+   "id": "7c016aef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0b7be15",
+   "id": "26ea5b48",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a7c3227",
+   "id": "de2648da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.886159Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b38cbcf5",
+   "id": "c226615a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.902882Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68e7dc8a",
+   "id": "454639ba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.959602Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ba62b6",
+   "id": "9f9f07d0",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "179a28a3",
+   "id": "ed44c974",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.375669Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec668c78",
+   "id": "bdfcc48a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73d916fe",
+   "id": "cef7aa09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.842544Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bbb398f",
+   "id": "2e5c2901",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "712849f1",
+   "id": "590eb19b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.286887Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c0408d1e",
+   "id": "9fd4c2dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.853357Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f3edbf6d",
+   "id": "e88b4574",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:10.153387Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6b5680",
+   "id": "06009b11",
    "metadata": {},
    "source": [
     "\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "66a955d3",
+   "id": "fba2eef7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:13.009426Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7a912b90",
+   "id": "67524f20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:15.560641Z",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4dabc9",
+   "id": "f6268456",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458a9cc0",
+   "id": "a12a15df",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1ae0f5c9",
+   "id": "a2c54e97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.366022Z",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "93fb44da",
+   "id": "9c9e24e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.658458Z",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b38cb6c",
+   "id": "ec9be0ef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:51:11.735631Z",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79790fc0",
+   "id": "f1eec1d6",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ce417a24",
+   "id": "954248a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,8 +688,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9d9dbc4",
+   "execution_count": 12,
+   "id": "b6a93fd0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -972,6 +972,52 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     }
@@ -996,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e92d63",
+   "id": "26f856b0",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1005,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "da2e0d3c",
+   "id": "a0f903e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef74b58",
+   "id": "cb61bac2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1386,7 +1432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6b9797",
+   "id": "053147b4",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1395,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8eaa0815",
+   "id": "f85f1456",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "02f71033",
+   "id": "d4763af1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1448,7 +1494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b763355",
+   "id": "2c51f719",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1457,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e61776b2",
+   "id": "20a2c25f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d7efcd4",
+   "id": "0d678309",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1510,7 +1556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284feb85",
+   "id": "44b2704b",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1519,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f675c784",
+   "id": "36925627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "04d9470f",
+   "id": "d430f0f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1901,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad1ae519",
+   "id": "e15a7ce6",
    "metadata": {},
    "outputs": [],
    "source": []
