--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy4.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch1-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "51187c6a",
+   "id": "c2903c32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27b02546",
+   "id": "8df2e4eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61044b4b",
+   "id": "f98e3607",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1759ea5",
+   "id": "24caff4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.886159Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "92a68c4c",
+   "id": "93da88f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.902882Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "186271f6",
+   "id": "4c47f9ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:05.959602Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f118a29",
+   "id": "99359e96",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1b995090",
+   "id": "ea25b63b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.375669Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b32277",
+   "id": "130e879e",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "93a790d3",
+   "id": "6eee3c8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:07.842544Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c98284",
+   "id": "1f06823d",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9d83e78a",
+   "id": "fff32624",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.286887Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1aa2fd18",
+   "id": "1203a447",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:08.853357Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "38afa1c7",
+   "id": "9be4fc65",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:10.153387Z",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee4b7c87",
+   "id": "60ca6b08",
    "metadata": {},
    "source": [
     "\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f328cb42",
+   "id": "afe65667",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:13.009426Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a0e2bb2e",
+   "id": "862dfa8c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:15.560641Z",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a68b9b",
+   "id": "3e8e90eb",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cabbcce",
+   "id": "1e87495c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7dae5be3",
+   "id": "c99ca214",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.366022Z",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "91c26dfe",
+   "id": "fdcb15e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:46:17.658458Z",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8920c17d",
+   "id": "7996f8f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-05T15:51:11.735631Z",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ef32e0d",
+   "id": "941900f0",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5eaa87ea",
+   "id": "b04f7886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "22645b8b",
+   "id": "13c545eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4094ecd9",
+   "id": "cdb5f60c",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c34ca4c3",
+   "id": "54b4767e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "004fcf00",
+   "id": "5c3779bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6449f12",
+   "id": "d0e39779",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bfecd4d5",
+   "id": "b1dad6f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "271670f1",
+   "id": "52570ee6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "907d5bea",
+   "id": "0b48151f",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b24f9155",
+   "id": "559cde76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a561d24e",
+   "id": "4283683a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1785,6 +1785,69 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     }
@@ -1809,7 +1872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe640481",
+   "id": "ecaa4e30",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1818,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7d64e6de",
+   "id": "20e137f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,7 +1906,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "67ef0475",
+   "id": "fb8f8e1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -2200,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c281a76b",
+   "id": "9b7cc58d",
    "metadata": {},
    "outputs": [],
    "source": []
