--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "92b34534",
+   "id": "c7a5dbb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "25614958",
+   "id": "53598bed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0a3313b",
+   "id": "557f2268",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0634736",
+   "id": "3ccf443d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5ec102f0",
+   "id": "e7e69187",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e1e994e5",
+   "id": "97bb954d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82827ff9",
+   "id": "20b12555",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "642bbb4a",
+   "id": "57fff50a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4ffbd2",
+   "id": "a33f04cb",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b7b14a28",
+   "id": "e71aec6d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504af210",
+   "id": "f401ff76",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c30f234a",
+   "id": "f6632aba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d3ed7d11",
+   "id": "f79a1a66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "73f17597",
+   "id": "5a0af915",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4eab28de",
+   "id": "69977092",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9909036f",
+   "id": "3492ab8c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bf461104",
+   "id": "cdb9dc42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d92d9d7b",
+   "id": "bd40c9f0",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6ec438",
+   "id": "b530a4d3",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c6772eb4",
+   "id": "d7519401",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a8e9fbed",
+   "id": "4da7039d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6669e552",
+   "id": "7a0eb268",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -511,7 +511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 17:53:53 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 15:36:03 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -523,7 +523,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -531,7 +531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfe6245489d540e490e99e924f205a8e",
+       "model_id": "c3b8cf2ac791440dbaed06bfd590de54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,17 +543,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 17:53:53 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 15:36:03 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -561,6 +554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -568,7 +562,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -578,8 +572,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 17:53:53: Tuning LogisticRegression...\n",
-      "2024/01/04, 17:54:28: Tuning for LogisticRegression is finished [F1 score = 0.7803235823585813, Accuracy = 0.8042666666666668]\n",
+      "2024/01/05, 15:36:03: Tuning LogisticRegression...\n",
+      "2024/01/05, 15:36:41: Tuning for LogisticRegression is finished [F1 score = 0.7811307003361323, Accuracy = 0.8049777777777778]\n",
       "\n"
      ]
     },
@@ -587,14 +581,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 17:54:28 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 15:36:41 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a8a8f5579c6412e8b43b372e7d813d9",
+       "model_id": "6b69e61fb545499bb184ea0eee1407d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -615,7 +609,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "625e72e982d84cb787fac89732e2fdc4",
+       "model_id": "a4b896d0303445c98a4cb3497b543000",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c214fcc",
+   "id": "40ec364f",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -656,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a3f8bf87",
+   "id": "6e4e8412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,6 +658,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__203641.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -680,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e74b5ce7",
+   "id": "087e222c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1036,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792dc3e8",
+   "id": "72d7c96b",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1045,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c06a5ad4",
+   "id": "99af3505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,6 +1048,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__203641.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1069,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3692a60",
+   "id": "fc928ba1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1425,7 +1421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc921f92",
+   "id": "3b394d6c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1434,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b09f7457",
+   "id": "8392cfff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,6 +1438,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__203641.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1458,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a04af5da",
+   "id": "33a7cd18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1486,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa7fd59",
+   "id": "499c78dd",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1495,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "20f37c04",
+   "id": "a6296688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,6 +1500,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__203641.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1519,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "275510ee",
+   "id": "0b6b9e8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1547,7 +1545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3a14c7",
+   "id": "59d277c4",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1556,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b39608c5",
+   "id": "e2a2c0a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,6 +1562,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__203641.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1580,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17af1c98",
+   "id": "f62fbb02",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1937,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05d4089d",
+   "id": "ae0a8641",
    "metadata": {},
    "outputs": [],
    "source": []
